name:             Win32-cryptography
version:          0.1
synopsis:         Haskell bindings to cryptography functions of the Windows API
license:          MIT
license-file:     LICENSE
author:           Anton Dessiatov
maintainer:       anton.dessiatov@gmail.com
copyright:        Anton Dessiatov, 2015
category:         System
build-type:       Simple
cabal-version:    >=1.16
homepage:         https://github.com/anton-dessiatov/Win32-cryptography
bug-reports:      https://github.com/anton-dessiatov/Win32-cryptography/issues
description:
    This package contains bindings for cryptography functions of the Windows API.

library
  default-language: Haskell2010
  build-depends:
      base >= 4 && < 5
    , Win32 >= 2
    , Win32-errors >= 0.2.1
  exposed-modules:
  other-modules:
  hs-source-dirs: src
  if os(windows) && arch(i386)
    cpp-options: "-DWINDOWS_CCONV=stdcall"
  else
    cpp-options: "-DWINDOWS_CCONV=ccall"
