name:             Win32-cryptography
version:          0.1
synopsis:         Haskell bindings to cryptography functions of the Windows API
license:          MIT
license-file:     LICENSE
author:           Anton Dessiatov
maintainer:       anton.dessiatov@gmail.com
copyright:        Anton Dessiatov, 2015
category:         System
build-type:       Simple
cabal-version:    >=1.16
homepage:         https://github.com/anton-dessiatov/Win32-cryptography
bug-reports:      https://github.com/anton-dessiatov/Win32-cryptography/issues
description:
    This package contains bindings for cryptography functions of the Windows API.

library
  default-language: Haskell2010
  build-depends:
      base >= 4 && < 5
    , bytestring >= 0.10
    , resourcet >= 1.1
    , text >= 1
    , transformers >= 0.4
    , Win32 >= 2
    , Win32-errors >= 0.2.1
  exposed-modules:
    System.Win32.Cryptography.Certificates
    System.Win32.Cryptography.Encoding
    System.Win32.Cryptography.Types
  other-modules:
    System.Win32.Cryptography.Certificates.Internal
    System.Win32.Cryptography.Encoding.Internal
    System.Win32.Cryptography.Helpers
    System.Win32.Cryptography.Types.Internal
  hs-source-dirs: src
  if os(windows) && arch(i386)
    cpp-options: "-DWINDOWS_CCONV=stdcall"
  else
    cpp-options: "-DWINDOWS_CCONV=ccall"
